# SARtor

./: .gitignore  pyproject.toml
config/: config.yaml
config/blip2/: blip2.yaml
config/fine-tune/: fine-tune.yaml
config/fine_tune/: fine_tune.yaml
config/pretrain/: pretrain.yaml
config/train/: train.yaml
data/: .gitignore
sartor/blip2/: infer.py  pretrain.py
sartor/fine_tune/: fine_tune.py
sartor/infer/: infer.py  infer_pretrained.ipynb  infer_pretrained.py
sartor/modules/: blip2_dataset.py  compute_metrics.py  constants.py  dataset.py  generate.py  tokenizer.py  utils.py
sartor/pretrain/: .gitignore  pretrain.py
sartor/train/: .gitignore  train.py
