[tool.poetry]
name = "sartor"
version = "0.1.0"
description = ""
authors = ["Aruna Shamil"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
hydra-core = "^1.3.2"
datasets = "^4.4.1"
numpy = "^2.3.4"
pandas = "^2.3.3"
pathlib = "^1.0.1"
tqdm = "^4.67.1"
matplotlib = "^3.10.7"
scikit-learn = "^1.7.2"
torch = "^2.9.1"
torchvision = "^0.24.1"
transformers = "^4.57.1"
accelerate = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
